# ccaf-exam-prep

./: .env.example  .gitignore  CLAUDE.md  README.es.md  README.md
ccaf-prep/: ANALYSIS.md  DISTRACTOR_HEURISTIC.md  GRACEFUL_DEGRADATION.md  HUB_AND_SPOKE.md  LEAST_PRIVILEGE.md  MAPPING.md  SELF_CRITIQUE.md  STUDY_PLAN.md  TASK_DECOMPOSITION.md  pyproject.toml
ccaf-prep/exercises/: HANDOFF-standardize-02-05.md
ccaf-prep/exercises/01-support-agent/: PARALLEL_TOOL_USE.md  README.md  SAMPLE_RUNS.md  agent.py  tools.py
ccaf-prep/exercises/02-claude-code-team/: .mcp.json  CLAUDE.md  README.md  team-conventions.md
ccaf-prep/exercises/02-claude-code-team/.claude/commands/: review-pr.md
ccaf-prep/exercises/02-claude-code-team/.claude/rules/: tests.md
ccaf-prep/exercises/02-claude-code-team/.claude/skills/changelog/: SKILL.md
ccaf-prep/exercises/03-extraction-pipeline/: README.md  SAMPLE_RUNS.md  extract.py
ccaf-prep/exercises/04-multi-agent-research/: README.md  SAMPLE_RUNS.md  coordinator.py  coordinator_sdk.py  manifest.json
ccaf-prep/exercises/05-cicd-review/: README.md  SAMPLE_RUNS.md  ci_review.sh  findings.schema.json  review.py
ccaf-prep/notebooks/: D1_agentic_loops.ipynb  D2_tool_design_mcp.ipynb  D3_claude_code_config.ipynb  D5_context_reliability.ipynb  README.md  mock_exam_and_review.ipynb
ccaf-prep/reference/: README.md
claude-with-anthropic-api/: .env.example  001_chunking.ipynb  001_prompt_evals.ipynb  001_prompt_evals_complete.ipynb  001_prompt_evals_fns.ipynb  001_prompt_evals_grader.ipynb  001_prompting.ipynb  001_requests.ipynb  (+17 more)
(+9 files in other folders)
